--- a/questionario/css/styles.css
+++ b/questionario/css/styles.css
@@ -46,6 +46,15 @@ h1 {
     font-weight: 600;
 }
 
+.interviewers-selection-label {
+    font-size: 20px;
+    color: #333;
+    margin-left: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
 .options {
     display: flex;
     flex-direction: column;
