--- a/questionario/css/styles.css
+++ b/questionario/css/styles.css
@@ -632,7 +632,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40px;
+    margin-bottom: 40px;
     font-size: 14px;
     color: #666;
     width: 100%;
